Change background position of header images to stop cropping faces at the top of images

--- a/src/styles/partials/layout/_header.scss
+++ b/src/styles/partials/layout/_header.scss
@@ -1,6 +1,6 @@
 #banner {
   background-color: $site-dark;
-  background-position: center;
+  background-position: center 30%;
   background-repeat: no-repeat;
   background-size: cover;
 }
